--- a/views/profile.pug
+++ b/views/profile.pug
@@ -35,7 +35,7 @@ body(onload="main()")
     div#tweets.show(name=id)
     div#tweets-and-replies.hide
     div#likes.hide
-  #editor
+  #editor.hide
     #edit-panel
       #editor-header
         #close(onclick="closeEditor()") X
