--- a/views/commonPart.pug
+++ b/views/commonPart.pug
@@ -40,13 +40,13 @@ html(lang="en")
             .icon
               svg(viewBox="0 0 30 30" width="30px" height="30px" class="svg-icon" id="home")
                 path(d="M 12 2 L 0 13 L 4 13 L 4 24 L 10 24 L 10 18 L 14 18 L 14 24 L 20 24 L 20 13 L 24 13 L 12 2 z")
-            h2#home Home
+            h2.home Home
         .sideBarElements
           .rapper(onmouseover="changeSvgColour('profile')" onmouseleave="restoreSvgColour('profile')" onclick="assignProfile()")
             .icon
               svg(x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30" id="profile" class="svg-icon")
                 path(d="M 15 3 C 11.686 3 9 5.686 9 9 L 9 10 C 9 13.314 11.686 16 15 16 C 18.314 16 21 13.314 21 10 L 21 9 C 21 5.686 18.314 3 15 3 z M 14.998047 19 C 10.992047 19 5.8520469 21.166844 4.3730469 23.089844 C 3.4590469 24.278844 4.329125 26 5.828125 26 L 24.169922 26 C 25.668922 26 26.539 24.278844 25.625 23.089844 C 24.146 21.167844 19.004047 19 14.998047 19 z")
-            h2#home Profile
+            h2.home Profile
         .sideBarElements
           div(onclick="showTweetPopUp()") 
             h2#tweetLogo Tweet
