--- a/views/commonPart.pug
+++ b/views/commonPart.pug
@@ -15,6 +15,7 @@ html(lang="en")
     title=title
 
   body(onload="main()")
+      #replyPopup
       #tweetPopUp()
         #closeTweetPopUp
           span(onclick="closeTweetPopUp()") X
