--- a/views/commonPart.pug
+++ b/views/commonPart.pug
@@ -12,6 +12,7 @@ html(lang="en")
     script(src="/js/search.js")
     script(src="/js/sideBar.js")
     script(src="/js/tweet.js")
+    script(src="/js/svgPath.js")
     title=title
 
   body(onload="main()")
