|#7|rahit/vikram| separeted out htmlGenaretors

--- a/views/commonPart.pug
+++ b/views/commonPart.pug
@@ -13,6 +13,7 @@ html(lang="en")
     script(src="/js/sideBar.js")
     script(src="/js/tweet.js")
     script(src="/js/svgPath.js")
+    script(src="/js/htmlGenerator.js")
     title=title
 
   body(onload="main()")
