--- a/public/css/tweet.css
+++ b/public/css/tweet.css
@@ -7,64 +7,53 @@
   margin-right: 10px;
   overflow: scroll;
 }
-
 #header {
   border-bottom: solid 0.5px lightgray;
   height: 7%;
   margin-top: 1.5vw;
   width: 100%;
 }
-
 #header > span {
   font-weight: 500;
   font-size: 2vw;
   margin: 1vw;
 }
-
 #tweets-section {
   height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
 }
-
 ::-webkit-scrollbar {
   width: 0px;
   background: transparent;
 }
-
 #tweet-box img {
   width: 40px;
   border-radius: 50%;
 }
-
 .text-area {
   display: flex;
   justify-content: space-between;
 }
-
 #tweet-box * textarea {
   border: none;
   width: 44vw;
   font-size: 1.5vw;
   margin-left: 1vw;
 }
-
 #tweet-bLog {
   border-bottom: solid 0.5px lightgray;
   height: 28%;
   width: 100%;
 }
-
 #tweet-blog-elements {
   display: flex;
 }
-
 #tweet-button {
   height: 20px;
   width: 30px;
   margin: 0% 0% 0% 85%;
 }
-
 #tweet-button > button {
   height: 3vw;
   width: 7vw;
@@ -75,46 +64,38 @@
   border: none;
   outline: none;
 }
-
 .tweet {
   height: 30%;
   width: 100%;
   border-bottom: solid 0.5px lightgray;
   margin-bottom: 1%;
 }
-
 .tweet:hover {
   background-color: #d0cccc29;
 }
-
 .content-section {
   display: flex;
   height: 80%;
 }
-
 .dp {
   width: 10%;
   cursor: pointer;
 }
-
 .dp > img {
   width: 74%;
   margin-top: 1vw;
   margin-left: 1vw;
   border-radius: 50%;
 }
-
 .info {
   width: 80%;
 }
-
 .user-info {
   display: flex;
   height: 20%;
   padding: 2%;
   justify-content: start;
 }
-
 .user-name {
   font-size: larger;
   color: #373737;
@@ -122,23 +103,19 @@
   font-weight: 500;
   cursor: pointer;
 }
-
 .user-name :hover {
   color: black;
 }
-
 .user-id,
 .time-stamp {
   color: gray;
   padding-top: 1.8%;
 }
-
 .content {
   cursor: pointer;
   height: 70%;
   padding: 2%;
 }
-
 .right-side-options {
   width: 10px;
   height: 10px;
@@ -148,30 +125,25 @@
   color: rgba(24, 22, 22, 0.81);
   font-weight: 100;
 }
-
 .right-side-options > img {
   height: 100%;
 }
-
 .tweet-options {
   display: flex;
   justify-content: space-evenly;
   height: 20%;
 }
-
 .delete-tweet > span {
   font-size: 1vw;
   margin: 9% 12% 8% 14%;
   padding: 0;
   color: rgb(230, 91, 133);
 }
-
 .option {
   width: 25%;
   display: flex;
 }
-
-.replay-icon,
+.reply-icon,
 .retweet-icon,
 .like-icon,
 .bookmark-icon {
@@ -181,45 +153,35 @@
   border-radius: 50%;
   cursor: pointer;
 }
-
-.replay-icon:hover,
+.reply-icon:hover,
 .bookmark-icon:hover {
   background-color: #dff0f9;
 }
-
-.replay-svg:hover,
+.reply-svg:hover,
 .bookmark-svg:hover {
   fill: rgb(29, 161, 242);
   stroke: rgb(29, 161, 242);
 }
-
 .retweet-icon:hover {
   background-color: rgb(223, 242, 235);
 }
-
 .retweet-svg:hover {
   fill: rgb(22, 191, 99);
   stroke: rgb(22, 191, 99);
 }
-
 .like-icon:hover {
   background-color: rgb(243, 227, 235);
 }
-
 .like-svg:hover {
   fill: rgb(228, 73, 121);
   stroke: rgb(228, 73, 121);
 }
-
-.replay-count,
-.retweet-count,
-.like-count {
+.react-count {
   margin-top: 1%;
   margin-left: 2%;
   color: gray;
   cursor: pointer;
 }
-
 .options {
   display: none;
   position: relative;
@@ -230,81 +192,66 @@
   border-radius: 6px;
   background: white;
 }
-
 .delete-tweet {
   display: flex;
   cursor: pointer;
   justify-content: space-around;
 }
-
 .delete-tweet img {
   height: 34px;
   width: 30px;
   margin: 2%;
 }
-
 .red {
   fill: red;
   stroke: red;
 }
-
 .green {
   fill: rgb(22, 191, 99);
   stroke: rgb(22, 191, 99);
 }
-
 .black {
   stroke: rgb(151, 148, 148);
 }
-
 .remove-access {
   pointer-events: none;
   background-color: #bbc7ff;
 }
-
 .add-access {
   background-color: #4a61c8;
   cursor: pointer;
 }
-
 .tweet-reactions {
   display: flex;
   display: flex;
   margin-top: -2%;
   margin-left: 1%;
 }
-
 .popup-header {
   display: flex;
   height: 9%;
   justify-content: start;
   border-bottom: 0.5px solid lightgray;
 }
-
 .head {
   margin: 1.2% 0% 0% 2%;
   font-size: larger;
 }
-
 .show {
   display: block;
 }
-
 .hide {
   display: none;
 }
-
 #liked-user {
   height: 100%;
   overflow: scroll;
 }
-
 #specific-tweet {
   overflow-x: hidden;
   overflow-y: scroll;
   height: 10%;
 }
-
 .retweet-options {
   cursor: pointer;
   width: 25%;
@@ -316,18 +263,15 @@
   border: 0.5px solid lightgray;
   border-radius: 6px;
 }
-
 .retweet-options > div {
   margin-top: 2%;
   margin-bottom: 6%;
   border-bottom: 0.5px lightgray;
 }
-
 .retweet-options > div:hover {
   background-color: #f3eded;
   border-bottom: #bbc7ff;
 }
-
 .retweet-by {
   margin-left: 2%;
   margin-top: 0.5%;
