--- a/public/css/tweet.css
+++ b/public/css/tweet.css
@@ -65,7 +65,7 @@
   outline: none;
 }
 .tweet {
-  height: 30%;
+  height: fit-content;
   width: 100%;
   border-bottom: solid 0.5px lightgray;
   margin-bottom: 1%;
@@ -276,4 +276,12 @@
   margin-left: 2%;
   margin-top: 0.5%;
   color: gray;
+}
+
+.parent-element {
+  height: 70%;
+  display: flex;
+  border: solid 0.2px black;
+  border-radius: 10px;
+  margin: 2%;
 }
