--- a/views/commonPart.pug
+++ b/views/commonPart.pug
@@ -17,7 +17,7 @@ html(lang="en")
     title=title
 
   body(onload="main()")
-      #replyPopup
+      #responsePopup
       #tweetPopUp()
         #closeTweetPopUp
           span(onclick="closeTweetPopUp()") X
@@ -33,7 +33,8 @@ html(lang="en")
                 circle(cx="50%" cy="50%" fill="none" id="count-indicator1" stroke-width="2" r="9" stroke="#4a61c8" stroke-linecap="round" style="stroke-dashoffset: 56; stroke-dasharray: 56.5487;")
                 text(x="50%" y="50%" text-anchor="middle" stroke="black" stroke-width="0.1px" dy=".3em" font-size="8px" id="counter1") 180
         #popUpFooter
-          button.primary-btn.add-access(onclick="postTweet(1);showCharCount('tweetText1','count-indicator1', 'counter1', 'popUpFooter')") Tweet
+          button.primary-btn.add-access(onclick=`postResponse('tweetText1',null, 'tweet', getLatestTweet)
+          ;showCharCount('tweetText1','count-indicator1', 'counter1', 'popUpFooter')`) Tweet
       #left-side-bar()
         img#logo(src="/assets/logo.png", alt="step-birds")
         .sideBarElements
