--- a/views/home.pug
+++ b/views/home.pug
@@ -23,7 +23,8 @@ head
           onkeydown="showCharCount('tweetText2','count-indicator2', 'counter2', 'tweet-button')")
       #tweet-blog-elements
         #tweet-button
-          button.primary-btn.add-access(onclick="postTweet(2); showCharCount('tweetText2','count-indicator2', 'counter2', 'tweet-button')") Tweet
+          button.primary-btn.add-access(onclick=`postResponse('tweetText2',null, 'tweet', getLatestTweet); 
+          showCharCount('tweetText2','count-indicator2', 'counter2', 'tweet-button')`) Tweet
         .char-count
           svg(height="100%" viewBox="0 0 20 20" width="100%" style="overflow: visible;")
             circle(cx="50%" cy="50%" fill="none" stroke-width="2" r="9" stroke="#E6ECF0")
