--- a/views/follower.pug
+++ b/views/follower.pug
@@ -3,6 +3,8 @@ head
 
   body(onload="()=>{}")
   include ./commonPart.pug
+  include ./mixins/_rightSide.pug
+
   #content-box()
     #header()
       a(href=`/user/profile/${id}`)
@@ -21,5 +23,4 @@ head
           h3= item.name
           p @#{item.id} 
 
-  
-#right-side-bar
++rightSide
