--- a/views/commonPart.pug
+++ b/views/commonPart.pug
@@ -6,6 +6,7 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet", href="/css/sideBar.css")
     link(rel="stylesheet", href="/css/tweet.css")
+    link(href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css' rel='stylesheet')
     link(rel="stylesheet", href="/css/search.css")
 
     script(src="/js/request.js")
