|#18|trinangkur/vikram| Added hashtags in tweet page

--- a/public/css/tweet.css
+++ b/public/css/tweet.css
@@ -280,7 +280,7 @@
   height: 70%;
   width: 100%;
   display: flex;
-  border: solid 0.2px black;
+  border: solid 0.2px lightgray;
   border-radius: 10px;
   margin: 2%;
 }
