rahit/trinangkur| changed name convention

--- a/views/follower.pug
+++ b/views/follower.pug
@@ -3,7 +3,7 @@ head
 
   body(onload="()=>{}")
   include ./commonPart.pug
-  include ./mixins/_rightSide.pug
+  include ./mixins/rightSide.pug
 
   #content-box()
     #header()
