--- a/views/home.pug
+++ b/views/home.pug
@@ -4,7 +4,7 @@ head
   script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
       type="text/javascript")
   include ./commonPart.pug
-  include ./mixins/_rightSide.pug
+  include ./mixins/rightSide.pug
 
 #content-box()
   #header()
