--- a/views/profile.pug
+++ b/views/profile.pug
@@ -5,7 +5,7 @@ head
     type="text/javascript")
 
   include ./commonPart.pug
-  include ./mixins/_rightSide.pug
+  include ./mixins/rightSide.pug
 
 body(onload="main()") 
   div#content-box()
