--- a/views/searchHashtag.pug
+++ b/views/searchHashtag.pug
@@ -4,8 +4,8 @@ head
   script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
       type="text/javascript")
   include ./commonPart.pug
-  include ./mixins/_rightSide.pug
-  include ./mixins/_tweetTemplate.pug
+  include ./mixins/rightSide.pug
+  include ./mixins/tweetTemplate.pug
 
 #content-box()
   #header()
