rahit/trinangkur|fixed using of relative path in pug mixins

--- a/views/follower.pug
+++ b/views/follower.pug
@@ -2,8 +2,8 @@ head
   link(href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css' rel='stylesheet')
 
   body(onload="()=>{}")
-  include ./commonPart.pug
-  include ./mixins/rightSide.pug
+  include commonPart.pug
+  include mixins/rightSide.pug
 
   #content-box()
     #header()
