--- a/views/tweet.pug
+++ b/views/tweet.pug
@@ -5,8 +5,8 @@ head
   script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
     type="text/javascript")
 
-  include ./commonPart.pug
-  include ./mixins/rightSide.pug
+  include commonPart.pug
+  include mixins/rightSide.pug
   include mixins/showHashTag.pug
 
   script(src="/js/reply.js")
