--- a/views/profile.pug
+++ b/views/profile.pug
@@ -4,8 +4,8 @@ head
   script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
     type="text/javascript")
 
-  include ./commonPart.pug
-  include ./mixins/rightSide.pug
+  include commonPart.pug
+  include mixins/rightSide.pug
 
 body(onload="main()") 
   div#content-box()
