--- a/views/searchHashtag.pug
+++ b/views/searchHashtag.pug
@@ -3,9 +3,9 @@ head
   script(src="/js/home.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
       type="text/javascript")
-  include ./commonPart.pug
-  include ./mixins/rightSide.pug
-  include ./mixins/tweetTemplate.pug
+  include commonPart.pug
+  include mixins/rightSide.pug
+  include mixins/tweetTemplate.pug
 
 #content-box()
   #header()
