|rahit/vikram|fixed bug from profile section

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -35,8 +35,8 @@ body(onload="main()")
       #user-likes(onclick="showUserActivities('likes')")
         #option3 Likes 
     div#tweets.show(name=id)
-    div#retweets.hide
-    div#likes.hide
+    //- div#retweets.hide
+    //- div#likes.hide
   #editor.hide
     #edit-panel
       #editor-header
